// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Temp details reducer should set the temp capacity 1`] = `
Object {
  "capacity": 20,
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp capacity type 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp description 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "new description",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": Object {
    "type": "moment",
  },
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end time 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "13:45",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end time input 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "13:45",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp iac setting 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp price 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": 99,
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp sku 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "12345678",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "January 1, 2018",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": Object {
    "type": "moment",
  },
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start time 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start time input 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "13:45",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp title 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "price": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "new title",
}
`;
